<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tennis Charting</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="chart_new_match">Chart New Match</string>
    <string name="review_matches">Review Matches</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="title_activity_match_chart">MatchChart</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="backhand">Backhand</string>
    <string name="forehand">Forehand</string>
    <string name="long_press_anywhere_to_end_point">Long-press anywhere\nto end point</string>
    <string name="serve_t">T</string>
    <string name="serve_body">Body</string>
    <string name="serve_wide">Wide</string>
    <string name="shot_loc_midcourt">Midcourt</string>
	<string name="photo_licenses">The following photos were used: 
	    "Dewey watches Wimbledon ("http://www.flickr.com/photos/aon/2664725415/) by angela n. 
	    under CC BY 2.0, 
	    "Broken Racket" (http://www.flickr.com/photos/spablab/957163667/) by spablab under CC BY 2.0,
	    "Tennis" (http://www.flickr.com/photos/dcjohn/30515698/) by dcJohn under CC BY 2.0,
	    "Tennis at Hersh Castle" (http://www.flickr.com/photos/harshlight/4027657471/) by HarshLight under CC BY 2.0. </string>
	<string name="tournament_name">Tournament Name</string>
	<string name="round">Round</string>
	<string name="court">Court</string>
	<string name="umpire">Umpire</string>
	<string name="three_sets">3 sets</string>
	<string name="five_sets">5 sets</string>
	<string name="final_tb">Final Set Tiebreak</string>
	<string name="no_final_tb">No Final Set Tiebreak</string>
	<string name="charted_by">Charted by (your name)</string>
	<string name="surface">Surface</string>
	<string name="start_charting">Start Charting!</string>
	<string name="men">Men</string>
	<string name="women">Women</string>
	<string name="left_handed">Left-handed</string>
	<string name="right_handed">Right-handed</string>
	<string name="player_1_name_prompt">Player 1\'s name (1st server)</string>
	<string name="player_2_name_prompt">Player 2\'s name</string>
	<string name="match_information">Match Information</string>
	<string name="first_service_game_on_near_side">First service game on near side</string>
	<string name="first_service_game_on_far_side">First service game on far side</string>
	<string name="left_legend_description">Left-hand shots are: Swipe up for lob, down for drop shot, left for slice, right for volley, up-right for swing volley, down-right for Half-volley.</string>
	<string name="winner">Winner</string>
	<string name="error">Error</string>
	<string name="unforced_error">Unforced Error</string>
	<string name="forced_error">Forced Error</string>
	<string name="unknown_point">Unknown Point</string>
	<string name="point_penalty">Point Penalty</string>
	<string name="net">Net</string>
	<string name="wide">Wide</string>
	<string name="deep">Deep</string>
	<string name="wide_and_deep">Wide &amp;amp; Deep</string>
	<string name="shank">Shank</string>
	<string name="unknown_error">Unknown Error</string>
	<string name="foot_fault">Foot Fault</string>
	<string name="edit_point">Edit Point</string>
	<string name="center_legend_description">Center shots are: Swipe up for smash, down for backhand smash, left for trick shot.</string>
	<string name="right_legend_description">Right-hand shots are: Swipe up for lob, down for drop shot, right for slice, left for volley, up-left for swing volley, down-left for Half-volley.</string>
	<string name="ace">Ace</string>
	<string name="service_winner">Service Winner</string>
	<string name="fault">Fault</string>
	<string name="letchord">Letchord</string>
	<string name="add_note">Add Note</string>
	<string name="retirement">Retirement</string>
	<string name="cancel_point">Cancel &amp; Continue Point</string>
	<string name="next_point">Next Point</string>
</resources>
