<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" >

        <Button
            android:id="@+id/btn_chart_new_match"
            android:layout_height="match_parent"
            android:layout_width="0dp"
	        android:layout_weight="1"
            android:text="@string/chart_new_match" />

        <Button
            android:id="@+id/btn_review_matches"
            android:layout_width="0dp"
            android:layout_height="match_parent"
	        android:layout_weight="1"
            android:text="@string/review_matches" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" >

        <Button
            android:id="@+id/btn_help"
            android:layout_height="match_parent"
            android:layout_width="0dp"
	        android:layout_weight="1"
            android:text="@string/help" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
	        android:layout_weight="1"
            android:text="@string/settings" />

    </LinearLayout>

</LinearLayout>
